--- a/trade.html
+++ b/trade.html
@@ -18,7 +18,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="index.html">Roadmap</a>
+								<a href="roadmap.html">Roadmap</a>
 								<ul>
 
 								</ul>
@@ -33,7 +33,7 @@
 
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
-					<div class="container">
+					<div class="button">
 						<header class="major">
 							<h2>Trade in The Future</h2>
 
@@ -44,7 +44,7 @@
 
 									<div class="container">
 										<header class="major">
-											<h2>INCOMING</h2>
+									<h2>COMING SOON</h2>
 
 							</section>
 
