--- a/roadmap.html
+++ b/roadmap.html
@@ -35,19 +35,19 @@
     <div class='progress'>
         <div class='progress_inner'>
           <div class='progress_inner__step'>
-            <label for='step-1'>Start order</label>
+            <label for='step-1'>Start</label>
           </div>
           <div class='progress_inner__step'>
-            <label for='step-2'>Prepare gift</label>
+            <label for='step-2'>Q1</label>
           </div>
           <div class='progress_inner__step'>
-            <label for='step-3'>Pack gift</label>
+            <label for='step-3'>Q2</label>
           </div>
           <div class='progress_inner__step'>
-            <label for='step-4'>Decorate box</label>
+            <label for='step-4'>Q3</label>
           </div>
           <div class='progress_inner__step'>
-            <label for='step-5'>Send gift</label>
+            <label for='step-5'>Q4</label>
           </div>
           <input checked='checked' id='step-1' name='step' type='radio'>
           <input id='step-2' name='step' type='radio'>
@@ -67,20 +67,20 @@
               
             </div>
             <div class='tab tab-1'>
-              <h1>Prepare gift</h1>
-              <p>Prepare gift</p>
+              <h1>Q1</h1>
+              <p>Prepare </p>
             </div>
             <div class='tab tab-2'>
-              <h1>Pack gift</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tortor ipsum, eleifend vitae massa non, dignissim finibus eros. Maecenas non eros tristique nisl maximus sollicitudin.</p>
+              <h1>Q2</h1>
+              <p>Apalagi</p>
             </div>
             <div class='tab tab-3'>
-              <h1>Decorate box</h1>
-              <p> Decorate box</p>
+              <h1>Q3</h1>
+              <p> Hmmm</p>
             </div>
             <div class='tab tab-4'>
-              <h1>Send gift</h1>
-              <p>Send Gift</p>
+              <h1>Q4</h1>
+              <p>Bingung</p>
             </div>
           </div>
           <div class='progress_inner__status'>
