--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 							<li>
 								<a href="roadmap.html">Roadmap</a>
 								<ul>
-
+							
 								</ul>
 							</li>
 							<li><a href="trade.html">Trade</a></li>
-							<li><a href="https://t.me/TheFutureCoin">Telegram</a></li>
+							<li><a href="index.html">Whitepaper</a></li>
 							<li><a href="trade.html" class="button">Connect<a/></li>
 
 						</ul>
@@ -210,11 +210,12 @@
 						</footer>
 					</div>
 				</section>
+				
 
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-telegram"><span class="label">Telegram</span></a></li>
+						<li><a href="https://t.me/TheFutureCoin"" class="icon brands alt fa-telegram"><span class="label">Telegram</span></a></li>
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 
 					</ul>
