--- a/roadmap.html
+++ b/roadmap.html
@@ -11,25 +11,25 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">The Future Coin</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="roadmap.html">Roadmap</a>
-								<ul>
+		<!-- Header -->
+    <header id="header">
+      <h1 id="logo"><a href="index.html">The Future Coin</a></h1>
+      <nav id="nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li>
+            <a href="roadmap.html">Roadmap</a>
+            <ul>
+          
+            </ul>
+          </li>
+          <li><a href="trade.html">Trade</a></li>
+          <li><a href="index.html">Whitepaper</a></li>
+          <li><a href="trade.html" class="button">Connect<a/></li>
 
-								</ul>
-							</li>
-							<li><a href="trade.html">Trade</a></li>
-							<li><a href="https://t.me/TheFutureCoin">Telegram</a></li>
-							<li><a href="index.html" class="button">Connect<a/></li>
-
-						</ul>
-					</nav>
-				</header>
+        </ul>
+      </nav>
+    </header>
 </head>
 <body>
     <div class='progress'>
