--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 
 <html>
 	<head>
+		<!-- Bootstrap CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<title>The Future.</title>
 		<link rel="shortcut icon" href="images/favicon-16x16.png">
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport"
+        content="width=device-width,initial-scale=1.0">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -13,24 +16,19 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">The Future Coin</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="roadmap.html">Roadmap</a>
-								<ul>
-							
-								</ul>
-							</li>
-							<li><a href="trade.html">Trade</a></li>
-							<li><a href="index.html">Whitepaper</a></li>
-							<li><a href="trade.html" class="button">Connect<a/></li>
-
-						</ul>
-					</nav>
-				</header>
+			<header id="header">
+				<h1 id="logo"><a href="index.html">The Future Coin</a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="roadmap.html">Roadmap</a></li>
+						<li><a href="trade.html">Trade</a></li>
+						<li><a href="index.html">Whitepaper</a></li>
+						<button type="button" class="btn btn-lg btn-primary" disabled>Connect</button>
+			
+					</ul>
+				</nav>
+			</header>
 
 			<!-- Banner -->
 				<section id="banner">
@@ -40,7 +38,7 @@
 							<p>And there are no hoverboards or flying cars.<br />
 							Just apps. Lots of mother flipping apps.</p>
 						</header>
-						<span class="image"><img src="images/FUTURE.png" alt="" /></span>
+						<span class="image" ><img src="images/FUTURE.png" alt="TheFutureCoin" class="roinded-circle"></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -122,7 +120,7 @@
 							using blockchain for payment processing can open up new opportunities for both the consumer and the company.
 							The cryptographic hash function will ensure that no one can hack into the system and alter its data as they please.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -224,7 +222,7 @@
 					</ul>
 				</footer>
 
-		</div>
+	
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
