--- a/trade.html
+++ b/trade.html
@@ -2,11 +2,14 @@
 
 <html>
 	<head>
-		<title>Trade</title>
+		 <!-- Bootstrap CSS -->
+		 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+		<title>Trade</title>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -24,31 +27,61 @@
 			</li>
 			<li><a href="trade.html">Trade</a></li>
 			<li><a href="index.html">Whitepaper</a></li>
-			<li><a href="trade.html" class="button">Connect<a/></li>
+			<button type="button" class="btn btn-lg btn-primary" disabled>Connect</button>
 
 		</ul>
 	</nav>
 </header>
 
 			<!-- Main -->
-				<div id="main" class="wrapper style1">
-					<div class="button">
-						<header class="major">
-							<h2>Trade in The Future</h2>
-
+				<section id="main" class="container">
+					<div class="text-center">
+						
+						<br>
+						<br>
+						<br>
+							<button type="button" class="btn btn-lg btn-primary" disabled>Trade in The Future</button>
 						</header>
+						<br>
+						<br>
+						<header class="major"></header>
 
 						<!-- Content -->
 							<section id="content">
-
-									<div class="container">
-										<header class="major">
+									<div class="container text-center">
 									<h2>COMING SOON</h2>
+								</section>
+							</div>
+							
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+	<div id="tradingview_2ae90"></div>
+	<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BTCUSD/?exchange=BITSTAMP" rel="noopener" target="_blank"><span class="blue-text">BTCUSD Chart</span></a> by TradingView</div>
+	<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+	<script type="text/javascript">
+	new TradingView.widget(
+	{
+	"width": 980,
+	"height": 610,
+	"symbol": "BITSTAMP:BTCUSD",
+	"interval": "15",
+	"timezone": "Etc/UTC",
+	"theme": "dark",
+	"style": "1",
+	"locale": "en",
+	"toolbar_bg": "#f1f3f6",
+	"enable_publishing": false,
+	"withdateranges": true,
+	"allow_symbol_change": true,
+	"container_id": "tradingview_2ae90"
+  }
+	);
+	</script>
+  </div>
+  <!-- TradingView Widget END -->
 
-							</section>
 
-					</div>
-				</div>
+
 
 				<!-- Footer -->
 					<footer id="footer">
@@ -62,7 +95,6 @@
 						</ul>
 					</footer>
 
-		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -73,6 +105,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 	</body>
 </html>
