--- a/trade.html
+++ b/trade.html
@@ -10,6 +10,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<title>Trade</title>
+		<link rel="shortcut icon" href="images/favicon-16x16.png">
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
